# nce-builder

./: .cursorrules  .editorconfig  .gitignore  CODE_APPROVAL_RULE.md  FILE_6813.docx  PROJECT_HANDOFF.md  README.md  TASK_SUMMARY.md  VERSION_CONTROL_RULES.md  composer.json  license.txt  phpcs.xml  phpstan.neon.dist  phpunit.xml.dist  pyproject.toml
FileZilla_local_copies/: table-editor.css
context/: 000_api_overview_chunk_01.md  000_api_overview_chunk_02.md  000_api_overview_chunk_03.md  010_profiles_create_or_update_profile_chunk_01.md  020_profiles_bulk_import_profiles_chunk_01.md  021_profiles_bulk_import_jobs_status_chunk_01.md  030_events_create_and_get_events_chunk_01.md  040_catalogs_core_get_items_and_model_chunk_01.md  050_rate_limits_and_errors_chunk_01.md  INDEX.md  KLAVIYO_SUPPORT_MEMO.md  Klaviyo Transactional vs Marketing Consent SMS & Email (Summary).md  RAG_Chunk_A_Core_Rules.md  RAG_Chunk_B_Headers.md  RAG_Chunk_C_Subscribe.md  RAG_Chunk_D_Unsubscribe.md  RAG_Chunk_E_Suppress.md  RAG_Chunk_F_Unsuppress.md  RAG_Chunk_G_Decision_Table.md
context copy/: api_overview_sync_async_matrix_chunk_01.md  bulk_create_data_source_records_chunk_01.md  bulk_create_events_chunk_01.md  bulk_import_profiles_spawn_job_chunk_01.md  create_data_source_chunk_01.md  create_event_chunk_01.md  create_or_update_profile_chunk_01.md  create_profile_chunk_01.md  get_bulk_import_profiles_job_chunk_01.md  get_bulk_import_profiles_job_errors_chunk_01.md  get_bulk_import_profiles_job_profiles_chunk_01.md  get_bulk_import_profiles_jobs_chunk_01.md
docs/: implementation-summary.md  (+10 more)
(+114 files in other folders)
